fixes cross browser alignment bug on checkbox

--- a/ui/checkbox.reel/checkbox.css
+++ b/ui/checkbox.reel/checkbox.css
@@ -22,6 +22,7 @@
     position: relative;
     cursor: pointer;
     transition: opacity .5s;
+    display: inline-block;
 }
 
 .Checkbox label:before {
@@ -58,9 +59,7 @@
     transition: color .25s;
 }
 
-.Checkbox input:checked + label:after {
-    opacity: 1;
-}
+.Checkbox input:checked + label:after { opacity: 1; }
 
 /* $fix - what should the focus state be? */
 
